test/deca/syntax/invalid/while_fin.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (; à la fin du while)

{
    while (true) {
        
    };
}